# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/zzw/com/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: lang.h  log.h  native-lib.cpp  native-lib2.cpp  native-lib3.cpp
app/src/main/java/zzw/com/ffmpegdemo/: MainActivity.kt  VideoUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/zzw/com/ffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
